# libmedia_for_luckfox_pico

./: CMakeLists.txt  README.md  build.sh  libmedia.pc.in
example/: README.md  media_info.c  media_simple.c  media_usb.c
include/: media.h
source/: media.c
